[gd_scene load_steps=3 format=3 uid="uid://bp5b48txpng4s"]

[ext_resource type="Script" path="res://Shadow.gd" id="1"]

[sub_resource type="RectangleShape2D" id="ShadowCollisionShape"]
size = Vector2(24, 48)

[node name="Shadow" type="Area2D"]
script = ExtResource("1")

[node name="ShadowCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("ShadowCollisionShape")

[node name="ShadowOutline" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -50.0
offset_right = 14.0
offset_bottom = 2.0
color = Color(0.8, 0.8, 0.9, 0.8)

[node name="ShadowSprite" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -48.0
offset_right = 12.0
offset_bottom = 0.0
color = Color(0.25, 0.25, 0.25, 1)

[node name="ShadowAura" type="PointLight2D" parent="."]
position = Vector2(0, -24)
color = Color(0.3, 0.2, 0.3, 1)
energy = 0.4
texture_scale = 2.0

[node name="NameLabel" type="Label" parent="."]
modulate = Color(0.9, 0.9, 0.9, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -70.0
offset_right = 25.0
offset_bottom = -50.0
text = "Shadow"
horizontal_alignment = 1
vertical_alignment = 1